<resources>
    <string name="app_name">Android Play</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">*******</string>
    <string name="btn_sign_up">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="full_name">Full Name</string>
    <string name="btnSaveStudent">Save</string>
    <string name="handleCancelStudent">Cancel</string>

    <string name="genderLabel">Gender</string>
    <string name="courseLabel">Course</string>
    <string name="yearLabel">Year</string>
    <string name="campusLabel">Campus</string>

    <string-array name="course_array">
        <item>----</item>
        <item>bsit</item>
        <item>act</item>
    </string-array>

    <string-array name="year_array">
        <item>----</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="campus_array">
        <item>----</item>
        <item>main</item>
        <item>lm</item>
        <item>banilad</item>
    </string-array>

    <string-array name="android_activities">
        <item>Student Information</item>
        <item>List View</item>
    </string-array>

    <string-array name="list_view_array">
        <item>Razer</item>
        <item>Steelseries</item>
    </string-array>

    <string name="btn_add_to_list">Add</string>
</resources>