<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="60dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ticketno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/ticketnumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Ticket Number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_idno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/idnumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="ID Number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/family_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Family Name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_given_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/given_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Given Name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_course_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingBottom="0dp"
                    android:text="@string/courseLabel" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_course_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_year_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingBottom="0dp"
                    android:text="@string/yearLabel" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_year_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_campus_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingBottom="0dp"
                    android:text="@string/campusLabel" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_campus_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSaveStudent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSaveStudent"
                android:onClick="handleSubmitStudent"/>

            <Button
                android:id="@+id/btnCancelStudent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/handleCancelStudent"
                android:onClick="handleCancelStudent"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>